[package]
name = "aflak_cake"
version = "0.1.0"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
variant_name = { path = "../variant_name" }
bow = { path = "../bow" }

[dev-dependencies]
serde_json = "1.0"
ron = "0.2"
lazy_static = "1.0"
variant_name_derive = { path = "../variant_name_derive" }
