[package]
name = "aflak"
version = "0.0.3"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
description = "Advanced Framework for Learning Astrophysical Knowledge"
license = "GPL-3.0-only"
homepage = "https://github.com/aflak-vis/aflak"
repository = "https://github.com/aflak-vis/aflak"
readme = "../README.md"

[dependencies]
aflak_cake = { path = "./aflak_cake", version = "0.0.3" }
aflak_plot = { path = "./aflak_plot", version = "0.0.3" }
aflak_primitives = { path = "./aflak_primitives", version = "0.0.3" }
imgui_file_explorer = { path = "./imgui_file_explorer", version = "0.0.3" }
aflak_imgui_glium_support = { path = "./imgui_glium_support", version = "0.0.3" }
node_editor = { path = "./node_editor", version = "0.0.3" }

glium = { version = "0.22", default-features = true }
imgui = { path = "../imgui-rs", version = "0.0.22-pre" }
imgui-glium-renderer = { path = "../imgui-rs/imgui-glium-renderer", version = "0.0.22-pre" }

[workspace]
members = [
    "aflak_cake",
    "aflak_plot",
    "aflak_primitives",
    "imgui_file_explorer",
    "imgui_glium_support",
    "node_editor",
    "variant_name",
    "variant_name_derive",
]
