[package]
name = "aflak"
version = "0.0.4-pre"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
description = "Advanced Framework for Learning Astrophysical Knowledge"
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://github.com/aflak-vis/aflak"
repository = "https://github.com/aflak-vis/aflak"
readme = "../README.md"
build = "src/build.rs"
keywords = ["programming", "visualization", "astronomy", "astrophysics", "aflak"]
categories = ["visualization", "science"]

[dependencies]
aflak_cake = { path = "./aflak_cake", version = "0.0.3" }
aflak_plot = { path = "./aflak_plot", version = "0.0.3" }
aflak_primitives = { path = "./aflak_primitives", version = "0.0.3" }
imgui_file_explorer = { path = "./imgui_file_explorer", version = "0.0.3" }
aflak_imgui_glium_support = { path = "./imgui_glium_support", version = "0.0.3" }
node_editor = { path = "./node_editor", version = "0.0.3" }

clap = "2.32.0"
glium = { version = "0.27", default-features = true }
imgui = { version = "0.5.0" }
imgui-glium-renderer = { version = "0.5.0" }
implot = { path = "../implot-rs" }
owning_ref = "0.4.0"
[build-dependencies]
clap = "2.32.0"

[workspace]
members = [
    "aflak_cake",
    "aflak_plot",
    "aflak_primitives",
    "imgui_file_explorer",
    "imgui_glium_support",
    "node_editor",
    "variant_name",
    "variant_name_derive",
]
