[package]
name = "visprog_draw"
version = "0.1.0"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]

[dependencies]
glium = { version = "0.20", default-features = false }
aflak_cake = { path = "../aflak_cake" }

[dev-dependencies]
aflak_primitives = { path = "../aflak_primitives" }
glium = { version = "0.20", default-features = true }
