[package]
name = "aflak_cake"
version = "0.1.0"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]

[dependencies]
variant_name = { path = "../variant_name" }
boow = "0.1"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
ron = "0.2"
lazy_static = "1.0"
variant_name_derive = { path = "../variant_name_derive" }
