[package]
name = "aflak_plot"
version = "0.0.3"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
description = "Plotting library using imgui made for aflak"
edition = "2018"
license = "GPL-3.0-only"

[dependencies]
glium = { version = "0.30", default-features = true }
imgui = { version = "0.8.0" }
imgui-glium-renderer = { version = "0.8.0" }
ndarray = "0.12"

[dev-dependencies]
aflak_imgui_glium_support = { path = "../imgui_glium_support", version = "0.0.3" }
