[package]
name = "aflak_primitives"
version = "0.0.3"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
description = "Define primitive functions for use with aflak"
license = "GPL-3.0-only"

[dependencies]
aflak_cake = { path = "../aflak_cake", version = "0.0.3" }
fitrs = { git = "https://github.com/malikolivier/fitrs", version = "0.4.2", rev = "12d7d7f9144ba98f8aa9a0fc986aa864cbc7bee8" }
lazy_static = "1.0"
ndarray = { version = "0.12", features = ["serde-1"] }
serde = "1.0"
serde_derive = "1.0"
variant_name = { path = "../variant_name", version = "0.0.1" }
variant_name_derive = { path = "../variant_name_derive", version = "0.0.1" }
