[package]
name = "aflak_primitives"
version = "0.0.3"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
description = "Define primitive functions for use with aflak"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
aflak_cake = { path = "../aflak_cake", version = "0.0.3" }
imgui_tone_curve = { path = "../imgui_tone_curve", version = "0.0.3" }
fitrs = "0.5.0"
lazy_static = "1.0"
ndarray = { version = "0.12", features = ["serde-1"] }
ndarray-parallel = "0.9.1"
nalgebra = "0.30.1"
serde = "1.0"
serde_derive = "1.0"
regex = "1.5"
variant_name = { path = "../variant_name", version = "0.0.1" }
variant_name_derive = { path = "../variant_name_derive", version = "0.0.1" }
rawloader = "0.36.3"
libm = "0.2.1"
ttk-sys = { path = "../ttk-sys" }
permutator = "0.4.3"
