[package]
name = "imgui_file_explorer"
version = "0.0.3"
authors = ["Rikuo Uchiki <dbkn_rikuo@keio.jp>", "Malik Olivier Boussejra <malik@boussejra.com>"]
description = "File explorer plugin for imgui-rs"
license = "GPL-3.0-only"
repository = "https://github.com/aflak-vis/aflak"

[dependencies]
cfg-if = "0.1"
imgui = {path = "../../imgui-rs", version = "0.3.0-pre" }

[dev-dependencies]
glium = { version = "0.25", default-features = true }
imgui-glium-renderer = { path = "../../imgui-rs/imgui-glium-renderer", version = "0.3.0-pre" }
imgui-winit-support = { path = "../../imgui-rs/imgui-winit-support", version = "0.3.0-pre" }
