[package]
name = "imgui_file_explorer"
version = "0.0.3"
authors = ["Rikuo Uchiki <dbkn_rikuo@keio.jp>", "Malik Olivier Boussejra <malik@boussejra.com>"]
description = "File explorer plugin for imgui-rs"
license = "GPL-3.0-only"
repository = "https://github.com/aflak-vis/aflak"

[dependencies]
cfg-if = "0.1"
imgui = { version = "0.5.0" }

[dev-dependencies]
glium = { version = "0.27", default-features = true }
imgui-glium-renderer = { version = "0.5.0" }
imgui-winit-support = { version = "0.5.0" }
