[package]
name = "imgui_file_explorer"
version = "0.0.3"
authors = ["Rikuo Uchiki <dbkn_rikuo@keio.jp>", "Malik Olivier Boussejra <malik@boussejra.com>"]
description = "File explorer plugin for imgui-rs"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/aflak-vis/aflak"

[dependencies]
cfg-if = "0.1"
imgui = { version = "0.8.0" }

[dev-dependencies]
aflak_imgui_glium_support = { path = "../imgui_glium_support", version = "0.0.3" }
