[package]
name = "aflak_imgui_glium_support"
version = "0.0.3"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
description = "Support crate for using glium with imgui, made for aflak project"
license = "GPL-3.0-only"

[dependencies]
clipboard = "0.5.0"
glium = { git = "https://github.com/malikolivier/glium", rev = "f36ceca3864171e8217dc60085750e2af9beec82" }
imgui = { path = "../../imgui-rs", version = "0.0.22-pre" }
imgui-glium-renderer = { path = "../../imgui-rs/imgui-glium-renderer", version = "0.0.22-pre" }
