[package]
name = "aflak_imgui_glium_support"
version = "0.0.3"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
description = "Support crate for using glium with imgui, made for aflak project"
license = "GPL-3.0-only"

[dependencies]
clipboard = "0.5"
glium = { version = "0.27", default-features = true }
imgui = { version = "0.5.0" }
imgui-glium-renderer = { version = "0.5.0" }
imgui-winit-support = { version = "0.5.0" }
