[package]
name = "imgui_tone_curve"
version = "0.0.3"
authors = ["Rikuo Uchiki <dbkn_rikuo@keio.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { version = "0.8.0" }
serde = {version = "1.0", features=["derive"] }
serde_derive = "1.0"

[dev-dependencies]
glium = { version = "0.30", default-features = true }
imgui-glium-renderer = { version = "0.8.0" }
imgui-winit-support = { version = "0.8.0" }