[package]
name = "node_editor"
version = "0.0.3"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
description = "Node editor UI using imgui-rs as backend, made for aflak project"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
imgui = { version = "0.8.0" }
imgui_file_explorer = { path = "../imgui_file_explorer", version = "0.0.3" }
aflak_cake = { path = "../aflak_cake", version = "0.0.3" }
ron = "0.6"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
aflak_imgui_glium_support = { path = "../imgui_glium_support", version = "0.0.3" }
lazy_static = "1.0"
variant_name = { path = "../variant_name", version = "0.0.1" }
variant_name_derive = { path = "../variant_name_derive", version = "0.0.1" }
