[package]
name = "ui_image2d"
version = "0.0.1"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
description = "Wrap aflak_plot's 2D image visualization functions"
license = "GPL-3.0-only"

[dependencies]
aflak_plot = { path = "../aflak_plot", version = "0.0.1" }

[dev-dependencies]
glium = "0.22"
aflak_imgui = { path = "../../imgui-rs" }
imgui_glium_support = { path = "../imgui_glium_support" }
ndarray = "0.11"
